--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -1,3 +1,8 @@
-// .site-nav, .site-header, .site-footer .main-content-wrap {
-//     width: 100%;
-//   }
+.main {
+    max-width: 1000px;
+    margin-left: 264px;
+}
+
+.side-bar {
+    width: 264px;
+}
