--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -67,9 +67,9 @@
             <a href="#" class="nav-list-expander"><svg viewBox="0 0 24 24"><use xlink:href="#svg-arrow-right"></use></svg></a>
           {%- endif -%}
 
-          {%- if node.toc_list -%}
+          <!-- {%- if node.toc_list -%}
             <a href="#" class="nav-list-expander"><svg viewBox="0 0 24 24"><use xlink:href="#svg-arrow-right"></use></svg></a>
-          {%- endif -%}
+          {%- endif -%} -->
 
           <a href="{{ node.url | absolute_url }}" class="nav-list-link{% if page.url == node.url %} active{% endif %}">{{ node.title }}</a>
           {%- if node.has_children -%}
