--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -48,7 +48,7 @@ h5,
 h6 {
   margin-top: 0;
   margin-bottom: 1em;
-  font-weight: 500;
+  font-weight: 800;
   line-height: $body-heading-line-height;
   color: $body-heading-color;
 }
@@ -110,6 +110,7 @@ hr {
 .thin {
   height: 0.5px;
   padding: 0;
+  width: 50%;
   margin: $sp-4 0;
   background-color: $border-color;
   border: 0;
