--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -19,3 +19,9 @@
 code {
     white-space : pre-wrap !important;
 }
+
+.method-label{
+    color: blue;
+    font-size: 0.9em;
+    font-weight: 800
+  }
