--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -107,10 +107,10 @@ hr {
   border: 0;
 }
 
-.thin {
+hr.thin {
   height: 0.5px;
   padding: 0;
-  width: 50%;
+  width: 60%;
   margin: $sp-4 0;
   background-color: $border-color;
   border: 0;
