add my definition

--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -25,3 +25,9 @@ code {
     font-size: 0.9em;
     font-weight: 800
   }
+
+.csk-label{
+    // color: rgb(194, 38, 10);
+    font-size: 0.9em;
+    font-weight: 800
+  }
