--- a/_includes/footer_custom.html
+++ b/_includes/footer_custom.html
@@ -3,12 +3,12 @@
 <script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");
 document.write(unescape("%3Cspan style='display:none;' id='cnzz_stat_icon_123456789'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s96.cnzz.com/z_stat.php%3Fid%3D1261461194%26show%3Dpic1' type='text/javascript'%3E%3C/script%3E"));</script> {% endcomment %}
 
-{% comment %} <script type="text/javascript">
+<script type="text/javascript">
 function zoom() {
-    document.body.style.zoom = "100%" 
+    document.body.style.zoom = "110%" 
 }
 zoom()
-</script> {% endcomment %}
+</script>
 
 <script>
 function removeElementsByClass(className){
