add to each page

--- a/_includes/footer_custom.html
+++ b/_includes/footer_custom.html
@@ -20,3 +20,25 @@ function removeElementsByClass(className){
 removeElementsByClass("site-footer")
 </script>
 
+{% comment %} 
+**Cited as**
+```bib
+@article{commonsenserun,
+  title   = "An Online Compendium for Commonsense Reasoning Research.",
+  author  = "Lin, Bill Yuchen and Qiao, Yang and Ilievski, Filip and Zhou, Pei and Wang, Peifeng and Ren, Xiang", 
+  journal = "commonsense.run",
+  year    = "2021",
+  url     = "https://commonsense.run"
+}
+``` {% endcomment %}
+
+<p><strong>Cited as</strong></p>
+<div class="language-bib highlighter-rouge"><div class="highlight"><pre class="highlight"><code><span class="nc">@article</span><span class="p">{</span><span class="nl">commonsenserun</span><span class="p">,</span>
+  <span class="na">title</span>   <span class="p">=</span> <span class="s">"An Online Compendium for Commonsense Reasoning Research."</span><span class="p">,</span>
+  <span class="na">author</span>  <span class="p">=</span> <span class="s">"Lin, Bill Yuchen and Qiao, Yang and Ilievski, Filip and Zhou, Pei and Wang, Peifeng and Ren, Xiang"</span><span class="p">,</span> 
+  <span class="na">journal</span> <span class="p">=</span> <span class="s">"commonsense.run"</span><span class="p">,</span>
+  <span class="na">year</span>    <span class="p">=</span> <span class="s">"2021"</span><span class="p">,</span>
+  <span class="na">url</span>     <span class="p">=</span> <span class="s">"https://commonsense.run"</span>
+<span class="p">}</span>
+</code></pre></div></div>
+<hr>
