--- a/_includes/footer_custom.html
+++ b/_includes/footer_custom.html
@@ -32,8 +32,8 @@ removeElementsByClass("site-footer")
 }
 ``` {% endcomment %}
 
-<p><strong>Cited as</strong></p>
-<div class="language-bib highlighter-rouge"><div class="highlight"><pre class="highlight"><code><span class="nc">@article</span><span class="p">{</span><span class="nl">commonsenserun</span><span class="p">,</span>
+<p><strong>Cited as (TBD)</strong></p>
+<div class="language-bib highlighter-rouge"><div class="highlight"><pre class="highlight"><code><span class="nc">@electronic</span><span class="p">{</span><span class="nl">commonsenserun</span><span class="p">,</span>
   <span class="na">title</span>   <span class="p">=</span> <span class="s">"An Online Compendium for Commonsense Reasoning Research."</span><span class="p">,</span>
   <span class="na">author</span>  <span class="p">=</span> <span class="s">"Lin, Bill Yuchen and Qiao, Yang and Ilievski, Filip and Zhou, Pei and Wang, Peifeng and Ren, Xiang"</span><span class="p">,</span> 
   <span class="na">journal</span> <span class="p">=</span> <span class="s">"commonsense.run"</span><span class="p">,</span>
